--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 #root {
-  @apply flex items-center justify-center bg-[url('./assets/bg.jpg')] bg-cover bg-center
+  @apply flex items-center justify-center bg-cover bg-center;
 }
-::-webkit-scrollbar{display: none;}
+::-webkit-scrollbar {
+  display: none;
+}
